--- a/_posts/2021-02-20-Mysql.md
+++ b/_posts/2021-02-20-Mysql.md
@@ -37,7 +37,7 @@ tag: Mysql
   - 格式：`mysql -h ip地址 -u 用户名 -p`
   - 输入对方`mysql`密码
 
-##### 1-4. 其他命令
+#### 1-4. 其他命令
 
 需要注意的是: 以下所有命令中如过结尾有分号(`;`)的一定不能省略, 否则不是一条完整的命令, 系统会提示你继续输入命令
 
@@ -151,7 +151,7 @@ quit或exit
 
 ### 5. 查询数据
 
-#### 1、基本语法
+#### 基本语法
 
 - 格式：`select * from 表名;`
 - 说明：
@@ -333,7 +333,7 @@ select * from student limit 3,3;
 select * from student where gender=1 limit 0,3;
 ```
 
-### 关联
+### 6. 关联
 
 ```mysql
 // 建表语句：
@@ -362,13 +362,9 @@ select students.name,class.name from class left join students on class.id=studen
 select students.name,class.name from class right join students on class.id=students.classid;
 ```
 
-
-
 至此, `MySQL`中一些常用的命令行也基本介绍完了, 下面看一些`MySQL`和`Python`是如何进行交互的
 
-
-
-### `MySQL`和`Python`的交互
+### 7. `MySQL`和`Python`的交互
 
 - `Python`要对`MySQL`数据库进行操作, 需要引入`pymysql`模块
 - `pymsql`是`Python`中操作`MySQL`的模块, 并且`pymysql`支持`python3.x`版本
@@ -378,7 +374,7 @@ select students.name,class.name from class right join students on class.id=stude
 pip3 install pymysql
 ```
 
-#### 1. 创建数据库连接
+#### 创建数据库连接
 
 ```mysql
 # 链接数据库
@@ -411,7 +407,7 @@ db.close()
 
 ```
 
-#### 2. 创建表
+#### 创建表
 
 ```
 import pymysql
@@ -438,7 +434,7 @@ cursor.close()
 db.close()
 ```
 
-#### 3. 在表中插入数据
+#### 在表中插入数据
 
 ```
 import pymysql
@@ -468,7 +464,7 @@ cursor.close()
 db.close()
 ```
 
-#### 4. 修改/更新/删除数据
+#### 修改/更新/删除数据
 
 ```
 import pymysql
@@ -493,7 +489,7 @@ cursor.close()
 db.close()
 ```
 
-#### 5. 查询数据
+#### 查询数据
 
 - `fetchone`: 获取下一个查询结果集，结果集是一个对象
 - `fetchall`: 接收全部的返回的行
